adding a dropdown for selecting specific electrodes and downloading sample data if needed

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,61 +21,87 @@
     "import os\n",
     "import ipyvolume\n",
     "import ipyvolume as ipv\n",
-    "#pip install --upgrade ipyvolume"
+    "\n",
+    "#pip install --upgrade ipyvolume\n",
+    "# needs: pip install shapely\n",
+    "\n",
+    "## for dropdown meneu\n",
+    "import ipywidgets as widgets\n",
+    "from ipywidgets import interact, interact_manual\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path = 'C:\\\\Users\\\\mmazor\\\\Documents\\\\projects\\\\inProgress\\\\BrainViz\\\\examples\\\\exampleData\\\\test_subj'\n",
-    "if os.path.exists(local_path):\n",
-    "    sub = ny.freesurfer_subject(local_path)\n",
-    "    elecs = scipy.io.loadmat(os.path.join(local_path,'elecs\\\\TDT_elecs_all.mat'))\n",
-    "else:\n",
-    "    sub = ny.freesurfer_subject('test_subj')\n",
-    "    elecs=scipy.io.loadmat('/Applications/freesurfer_v5/subjects/test_subj/elecs/TDT_elecs_all.mat')\n"
+    "local_path = '../shablona/data'\n",
+    "if not os.path.isdir(os.path.join(local_path,'test_subj')):\n",
+    "   # download example data with wget\n",
+    "   print('no file')\n",
+    "   myfile = wget.download('https://zenodo.org/record/996814/files/Hamilton_et_al_img_pipe_test_subj.zip?download=1', local_path)\n",
+    "   # extract files\n",
+    "   with ZipFile(myfile, 'r') as zip_ref:\n",
+    "       zip_ref.extractall(local_path)\n",
+    "        \n",
+    "##unzip and load test subject data\n",
+    "#from zipfile import ZipFile\n",
+    "#\n",
+    "#zip_filename = '../../Hamilton_et_al_img_pipe_test_subj.zip'\n",
+    "#with ZipFile(zip_filename, 'r') as zipObj:\n",
+    "#   # Extract all the contents of zip file in current directory\n",
+    "#   zipObj.extractall('.')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sub.hemis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#sub.rh.pial_surface.vertex_count"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\neuropythy\\graphics\\core.py:1040: UserWarning: neuropythy: NOTE: due to a bug in ipyvolume, camera views cannot currently be set by neuropythy; however, if you click the reset (home) button in the upper-left corner of the figure, the requested view will be fixed.\n",
-      "  ' be set by neuropythy; however, if you click the reset (home) button in' +\n"
-     ]
-    },
+     "data": {
+      "text/plain": [
+       "lmap({'rhx': <lazy>, 'lhx': <lazy>, 'rh': <lazy>, 'lh': <lazy>})"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subj_path = local_path+'/test_subj'\n",
+    "\n",
+    "if os.path.exists(subj_path):\n",
+    "    sub = ny.freesurfer_subject(subj_path)\n",
+    "    elecs = scipy.io.loadmat(os.path.join(subj_path,'elecs/TDT_elecs_all.mat'))\n",
+    "else:\n",
+    "    print('file not found?')\n",
+    "    sub = ny.freesurfer_subject('test_subj')\n",
+    "    elecs=scipy.io.loadmat('/Applications/freesurfer_v5/subjects/test_subj/elecs/TDT_elecs_all.mat')\n",
+    "\n",
+    "sub.hemis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#elecs['eleclabels'][:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7102b18d60a14493a3642af5ff4abc9a",
+       "model_id": "0bb477d4ff574885b921f8f2e133106c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,12 +115,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdcabf129c3c4d8b9dfed5c951420cbd",
+       "model_id": "0ec15643332c4e508893de73a2fb616a",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Figure(camera=PerspectiveCamera(fov=0.644570721372708, position=(0.0, -100.0, 0.0), quaternion=…"
+       "VBox(children=(VBox(children=(Figure(camera=PerspectiveCamera(fov=0.644570721372708, position=(0.0, -100.0, 0.…"
       ]
      },
      "metadata": {},
@@ -102,19 +128,19 @@
     }
    ],
    "source": [
-    "#ipf = ny.cortex_plot(sub.rh.pial_surface, color=sub.rh.properties['BA44_weight'], cmap='Reds', alpha=0.7)\n",
+    "ipf = ny.cortex_plot(sub.rh.pial_surface, color=sub.rh.properties['BA44_weight'], cmap='Reds', alpha=0.7)\n",
     "clr = np.ones((sub.rh.pial_surface.vertex_count,4))\n",
     "clr[:,3] = 0.5\n",
     "ipv.figure()\n",
-    "ipf = ny.cortex_plot(sub.rh.pial_surface, color=clr, alpha=0.5, underlay=None)\n",
+    "ipf = ny.cortex_plot(sub.rh.pial_surface, color=clr, alpha=0.5, underlay=None, mesh_alpha = 0.5)\n",
     "\n",
-    "ipf.meshes[0].material.transparent = True\n",
-    "ipf.meshes[0].color = clr\n",
+    "#ipf.meshes[0].material.transparent = True\n",
+    "#ipf.meshes[0].color = clr\n",
+    "\n",
+    "ipv.selector_default()\n",
     "\n",
     "elecs_scatter = ipv.scatter(elecs['elecmatrix'][:,0],elecs['elecmatrix'][:,1],elecs['elecmatrix'][:,2], marker='sphere', selected=[0,1,2,3,4])\n",
     "#elecs_scatter\n",
-    "ipv.selector_default()\n",
-    "\n",
     "#print(ipv.animation_control)\n",
     "\n",
     "from ipywidgets import FloatSlider, ColorPicker, VBox, jslink\n",
@@ -129,31 +155,68 @@
     "jslink((elecs_scatter, 'color_selected'), (color_selected, 'value'))\n",
     "VBox([ipv.gcc(), size, size_selected, color, color_selected])\n",
     "\n",
-    "ipv.show()\n"
+    "#ipv.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26dcf74d4427484aa123455e0aee7442",
+       "model_id": "62d7a54a951649d792f03235b6d86ef5",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Scatter(color_selected=array('white', dtype='<U5'), geo='sphere', line_material=ShaderMaterial(), material=Sha…"
+       "interactive(children=(Dropdown(description='selected_elec', options=(array(['G1'], dtype='<U2'), array(['G2'],…"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "elecs_scatter"
+    "@interact\n",
+    "def select_parameters(selected_elec = elecs['eleclabels'][:,0], \n",
+    "                      selected_type = ['raw','not raw'],\n",
+    "                      selected_time = (0, 10, 10000)):\n",
+    "    elecs_scatter.selected = np.where(elecs['eleclabels'][:,0] == selected_elec)\n",
+    "    return \n",
+    "\n",
+    "elecs_scatter.selected"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['__header__', '__version__', '__globals__', 'anatomy', 'eleclabels', 'elecmatrix'])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "elecs.keys()"
    ]
   },
   {
@@ -184,5 +247,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
