changed name back

--- a/scripts/NeuropythyTransparentBrain.ipynb
+++ b/scripts/NeuropythyTransparentBrain.ipynb
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "local_path = '../BrainViz/data'\n",
+    "local_path = '../shablona/data'\n",
     "if not os.path.isdir(os.path.join(local_path,'test_subj')):\n",
     "   # download example data with wget\n",
     "   print('Downloading mesh and electrode data with wget')\n",
